--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Click==7.0
-Flask==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-mysql-connector-python==8.0.18
-protobuf==3.11.0
+certifi==2019.11.28
+chardet==3.0.4
+discogs-client==2.2.2
+idna==2.8
+oauthlib==3.1.0
+pkg-resources==0.0.0
+requests==2.22.0
 six==1.13.0
-Werkzeug==0.16.0
+urllib3==1.25.7
