--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.8.1
 certifi==2019.11.28
 chardet==3.0.4
 discogs-client==2.2.2
@@ -6,4 +7,6 @@ oauthlib==3.1.0
 pkg-resources==0.0.0
 requests==2.22.0
 six==1.13.0
+soupsieve==1.9.5
 urllib3==1.25.7
+wikipedia==1.4.0
